gensrc/org/dartlang/DartParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Dart.g 2012-05-20 15:40:38

  package org.dartlang;

  import org.dartlang.ast.*;
  import org.dartlang.compile.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class DartParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BREAK", "CONST", "CONTINUE", "DEFAULT", "DO", "ELSE", "FALSE", "FINAL", "FOR", "IF", "IN", "NULL", "RETURN", "TRUE", "WHILE", "INT", "ID", "STRING", "WHITESPACE", "'('", "')'", "','", "';'", "'='", "'{'", "'}'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'+'", "'-'", "'*'", "'/'", "'%'", "'~/'", "'<<'", "'>'", "'=='", "'!='", "'==='", "'!=='"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int WHILE=18;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int CONST=5;
    public static final int DO=8;
    public static final int FOR=12;
    public static final int ID=20;
    public static final int EOF=-1;
    public static final int BREAK=4;
    public static final int IF=13;
    public static final int FINAL=11;
    public static final int IN=14;
    public static final int CONTINUE=6;
    public static final int RETURN=16;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int NULL=15;
    public static final int DEFAULT=7;
    public static final int ELSE=9;
    public static final int WHITESPACE=22;
    public static final int INT=19;
    public static final int TRUE=17;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int FALSE=10;
    public static final int STRING=21;

    // delegates
    // delegators


        public DartParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DartParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return DartParser.tokenNames; }
    public String getGrammarFileName() { return "Dart.g"; }


    public static class topLevel_return extends ParserRuleReturnScope {
        public ASTNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "topLevel"
    // Dart.g:42:1: topLevel returns [ASTNode root] : (child= statement )* ;
    public final DartParser.topLevel_return topLevel() throws RecognitionException {
        DartParser.topLevel_return retval = new DartParser.topLevel_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        DartParser.statement_return child = null;



        try {
            // Dart.g:43:2: ( (child= statement )* )
            // Dart.g:43:4: (child= statement )*
            {
            root_0 = (CommonTree)adaptor.nil();

            final List<ASTNode> children = new ArrayList<ASTNode>();
            // Dart.g:44:4: (child= statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==RETURN||LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Dart.g:44:5: child= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_topLevel366);
            	    child=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, child.getTree());
            	    children.add((child!=null?child.root:null));

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            retval.root = new StatementsNode(children);

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "topLevel"

    public static class functionDeclaration_return extends ParserRuleReturnScope {
        public FunctionDeclarationNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "functionDeclaration"
    // Dart.g:47:1: functionDeclaration returns [FunctionDeclarationNode root] : ( type )? ID '(' parameterList ')' block ;
    public final DartParser.functionDeclaration_return functionDeclaration() throws RecognitionException {
        DartParser.functionDeclaration_return retval = new DartParser.functionDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        DartParser.type_return type1 = null;

        DartParser.parameterList_return parameterList4 = null;

        DartParser.block_return block6 = null;


        CommonTree ID2_tree=null;
        CommonTree char_literal3_tree=null;
        CommonTree char_literal5_tree=null;

        try {
            // Dart.g:48:2: ( ( type )? ID '(' parameterList ')' block )
            // Dart.g:48:4: ( type )? ID '(' parameterList ')' block
            {
            root_0 = (CommonTree)adaptor.nil();

            // Dart.g:48:4: ( type )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // Dart.g:48:4: type
                    {
                    pushFollow(FOLLOW_type_in_functionDeclaration388);
                    type1=type();

                    state._fsp--;

                    adaptor.addChild(root_0, type1.getTree());

                    }
                    break;

            }

            ID2=(Token)match(input,ID,FOLLOW_ID_in_functionDeclaration391); 
            ID2_tree = (CommonTree)adaptor.create(ID2);
            adaptor.addChild(root_0, ID2_tree);

            char_literal3=(Token)match(input,23,FOLLOW_23_in_functionDeclaration393); 
            char_literal3_tree = (CommonTree)adaptor.create(char_literal3);
            adaptor.addChild(root_0, char_literal3_tree);

            pushFollow(FOLLOW_parameterList_in_functionDeclaration395);
            parameterList4=parameterList();

            state._fsp--;

            adaptor.addChild(root_0, parameterList4.getTree());
            char_literal5=(Token)match(input,24,FOLLOW_24_in_functionDeclaration397); 
            char_literal5_tree = (CommonTree)adaptor.create(char_literal5);
            adaptor.addChild(root_0, char_literal5_tree);

            pushFollow(FOLLOW_block_in_functionDeclaration399);
            block6=block();

            state._fsp--;

            adaptor.addChild(root_0, block6.getTree());
            retval.root = new FunctionDeclarationNode((ID2!=null?ID2.getText():null), (parameterList4!=null?parameterList4.root:null), (type1!=null?type1.root:null), (block6!=null?block6.root:null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "functionDeclaration"

    public static class type_return extends ParserRuleReturnScope {
        public TypeNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // Dart.g:51:1: type returns [TypeNode root] : ID ;
    public final DartParser.type_return type() throws RecognitionException {
        DartParser.type_return retval = new DartParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID7=null;

        CommonTree ID7_tree=null;

        try {
            // Dart.g:52:2: ( ID )
            // Dart.g:52:4: ID
            {
            root_0 = (CommonTree)adaptor.nil();

            ID7=(Token)match(input,ID,FOLLOW_ID_in_type415); 
            ID7_tree = (CommonTree)adaptor.create(ID7);
            adaptor.addChild(root_0, ID7_tree);

            retval.root = new TypeNode(input.toString(retval.start,input.LT(-1)));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class parameter_return extends ParserRuleReturnScope {
        public ParameterNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameter"
    // Dart.g:54:1: parameter returns [ParameterNode root] : type name= ID ;
    public final DartParser.parameter_return parameter() throws RecognitionException {
        DartParser.parameter_return retval = new DartParser.parameter_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token name=null;
        DartParser.type_return type8 = null;


        CommonTree name_tree=null;

        try {
            // Dart.g:55:2: ( type name= ID )
            // Dart.g:55:4: type name= ID
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_type_in_parameter430);
            type8=type();

            state._fsp--;

            adaptor.addChild(root_0, type8.getTree());
            name=(Token)match(input,ID,FOLLOW_ID_in_parameter434); 
            name_tree = (CommonTree)adaptor.create(name);
            adaptor.addChild(root_0, name_tree);

            retval.root = new ParameterNode((type8!=null?type8.root:null), (name!=null?name.getText():null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "parameter"

    public static class parameterList_return extends ParserRuleReturnScope {
        public ParameterListNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameterList"
    // Dart.g:57:1: parameterList returns [ParameterListNode root] : (child1= parameter ( ',' child2= parameter )* )? ;
    public final DartParser.parameterList_return parameterList() throws RecognitionException {
        DartParser.parameterList_return retval = new DartParser.parameterList_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal9=null;
        DartParser.parameter_return child1 = null;

        DartParser.parameter_return child2 = null;


        CommonTree char_literal9_tree=null;

        try {
            // Dart.g:58:2: ( (child1= parameter ( ',' child2= parameter )* )? )
            // Dart.g:58:4: (child1= parameter ( ',' child2= parameter )* )?
            {
            root_0 = (CommonTree)adaptor.nil();

            final List<ASTNode> children = new ArrayList<ASTNode>();
            // Dart.g:59:4: (child1= parameter ( ',' child2= parameter )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Dart.g:60:11: child1= parameter ( ',' child2= parameter )*
                    {
                    pushFollow(FOLLOW_parameter_in_parameterList469);
                    child1=parameter();

                    state._fsp--;

                    adaptor.addChild(root_0, child1.getTree());
                    children.add(child1.root);
                    // Dart.g:60:57: ( ',' child2= parameter )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==25) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // Dart.g:60:58: ',' child2= parameter
                    	    {
                    	    char_literal9=(Token)match(input,25,FOLLOW_25_in_parameterList474); 
                    	    char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
                    	    adaptor.addChild(root_0, char_literal9_tree);

                    	    pushFollow(FOLLOW_parameter_in_parameterList478);
                    	    child2=parameter();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, child2.getTree());
                    	    children.add(child2.root);

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }

            retval.root = new ParameterListNode(children);

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "parameterList"

    public static class varDeclaration_return extends ParserRuleReturnScope {
        public VarDeclarationNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "varDeclaration"
    // Dart.g:64:1: varDeclaration returns [VarDeclarationNode root] : type ID varInit ;
    public final DartParser.varDeclaration_return varDeclaration() throws RecognitionException {
        DartParser.varDeclaration_return retval = new DartParser.varDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID11=null;
        DartParser.type_return type10 = null;

        DartParser.varInit_return varInit12 = null;


        CommonTree ID11_tree=null;

        try {
            // Dart.g:65:2: ( type ID varInit )
            // Dart.g:65:4: type ID varInit
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_type_in_varDeclaration511);
            type10=type();

            state._fsp--;

            adaptor.addChild(root_0, type10.getTree());
            ID11=(Token)match(input,ID,FOLLOW_ID_in_varDeclaration513); 
            ID11_tree = (CommonTree)adaptor.create(ID11);
            adaptor.addChild(root_0, ID11_tree);

            pushFollow(FOLLOW_varInit_in_varDeclaration515);
            varInit12=varInit();

            state._fsp--;

            adaptor.addChild(root_0, varInit12.getTree());
            retval.root = new VarDeclarationNode((ID11!=null?ID11.getText():null), (type10!=null?type10.root:null), (varInit12!=null?varInit12.root:null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "varDeclaration"

    public static class returnStatement_return extends ParserRuleReturnScope {
        public ReturnStatementNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "returnStatement"
    // Dart.g:67:1: returnStatement returns [ReturnStatementNode root] : RETURN expression ';' ;
    public final DartParser.returnStatement_return returnStatement() throws RecognitionException {
        DartParser.returnStatement_return retval = new DartParser.returnStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token RETURN13=null;
        Token char_literal15=null;
        DartParser.expression_return expression14 = null;


        CommonTree RETURN13_tree=null;
        CommonTree char_literal15_tree=null;

        try {
            // Dart.g:68:5: ( RETURN expression ';' )
            // Dart.g:68:7: RETURN expression ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            RETURN13=(Token)match(input,RETURN,FOLLOW_RETURN_in_returnStatement533); 
            RETURN13_tree = (CommonTree)adaptor.create(RETURN13);
            adaptor.addChild(root_0, RETURN13_tree);

            pushFollow(FOLLOW_expression_in_returnStatement535);
            expression14=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression14.getTree());
            char_literal15=(Token)match(input,26,FOLLOW_26_in_returnStatement537); 
            char_literal15_tree = (CommonTree)adaptor.create(char_literal15);
            adaptor.addChild(root_0, char_literal15_tree);

            retval.root = new ReturnStatementNode((expression14!=null?expression14.root:null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "returnStatement"

    public static class varInit_return extends ParserRuleReturnScope {
        public VarInitNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "varInit"
    // Dart.g:70:1: varInit returns [VarInitNode root] : '=' expression ;
    public final DartParser.varInit_return varInit() throws RecognitionException {
        DartParser.varInit_return retval = new DartParser.varInit_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal16=null;
        DartParser.expression_return expression17 = null;


        CommonTree char_literal16_tree=null;

        try {
            // Dart.g:71:2: ( '=' expression )
            // Dart.g:71:4: '=' expression
            {
            root_0 = (CommonTree)adaptor.nil();

            char_literal16=(Token)match(input,27,FOLLOW_27_in_varInit552); 
            char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);

            pushFollow(FOLLOW_expression_in_varInit554);
            expression17=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression17.getTree());
            retval.root = new VarInitNode((expression17!=null?expression17.root:null));

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "varInit"

    public static class block_return extends ParserRuleReturnScope {
        public StatementsNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // Dart.g:74:1: block returns [StatementsNode root] : '{' (child= statement )* '}' ;
    public final DartParser.block_return block() throws RecognitionException {
        DartParser.block_return retval = new DartParser.block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal18=null;
        Token char_literal19=null;
        DartParser.statement_return child = null;


        CommonTree char_literal18_tree=null;
        CommonTree char_literal19_tree=null;

        try {
            // Dart.g:75:2: ( '{' (child= statement )* '}' )
            // Dart.g:75:4: '{' (child= statement )* '}'
            {
            root_0 = (CommonTree)adaptor.nil();

            final List<ASTNode> children = new ArrayList<ASTNode>();
            char_literal18=(Token)match(input,28,FOLLOW_28_in_block572); 
            char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
            adaptor.addChild(root_0, char_literal18_tree);

            // Dart.g:76:4: (child= statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==RETURN||LA5_0==ID) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // Dart.g:76:5: child= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block580);
            	    child=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, child.getTree());
            	    children.add((child!=null?child.root:null));

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            char_literal19=(Token)match(input,29,FOLLOW_29_in_block589); 
            char_literal19_tree = (CommonTree)adaptor.create(char_literal19);
            adaptor.addChild(root_0, char_literal19_tree);

            retval.root = new StatementsNode(children);

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class statement_return extends ParserRuleReturnScope {
        public ASTNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // Dart.g:79:1: statement returns [ASTNode root] : ( varDeclaration ';' | callExpression ';' | functionDeclaration | returnStatement );
    public final DartParser.statement_return statement() throws RecognitionException {
        DartParser.statement_return retval = new DartParser.statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal21=null;
        Token char_literal23=null;
        DartParser.varDeclaration_return varDeclaration20 = null;

        DartParser.callExpression_return callExpression22 = null;

        DartParser.functionDeclaration_return functionDeclaration24 = null;

        DartParser.returnStatement_return returnStatement25 = null;


        CommonTree char_literal21_tree=null;
        CommonTree char_literal23_tree=null;

        try {
            // Dart.g:80:2: ( varDeclaration ';' | callExpression ';' | functionDeclaration | returnStatement )
            int alt6=4;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // Dart.g:80:4: varDeclaration ';'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_varDeclaration_in_statement604);
                    varDeclaration20=varDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, varDeclaration20.getTree());
                    char_literal21=(Token)match(input,26,FOLLOW_26_in_statement606); 
                    char_literal21_tree = (CommonTree)adaptor.create(char_literal21);
                    adaptor.addChild(root_0, char_literal21_tree);

                    retval.root = (varDeclaration20!=null?varDeclaration20.root:null);

                    }
                    break;
                case 2 :
                    // Dart.g:81:4: callExpression ';'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_callExpression_in_statement613);
                    callExpression22=callExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, callExpression22.getTree());
                    char_literal23=(Token)match(input,26,FOLLOW_26_in_statement615); 
                    char_literal23_tree = (CommonTree)adaptor.create(char_literal23);
                    adaptor.addChild(root_0, char_literal23_tree);

                    retval.root = (callExpression22!=null?callExpression22.root:null);

                    }
                    break;
                case 3 :
                    // Dart.g:82:4: functionDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_functionDeclaration_in_statement622);
                    functionDeclaration24=functionDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, functionDeclaration24.getTree());
                    retval.root = (functionDeclaration24!=null?functionDeclaration24.root:null);

                    }
                    break;
                case 4 :
                    // Dart.g:83:4: returnStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_returnStatement_in_statement629);
                    returnStatement25=returnStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, returnStatement25.getTree());
                    retval.root = (returnStatement25!=null?returnStatement25.root:null);

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class value_return extends ParserRuleReturnScope {
        public ExpressionNode root;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "value"
    // Dart.g:86:1: value returns [ExpressionNode root] : ( INT | callExpression | ID | STRING | '(' expression ')' );
    public final DartParser.value_return value() throws RecognitionException {
        DartParser.value_return retval = new DartParser.value_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INT26=null;
        Token ID28=null;
        Token STRING29=null;
        Token char_literal30=null;
        Token char_literal32=null;
        DartParser.callExpression_return callExpression27 = null;

        DartParser.expression_return expression31 = null;


        CommonTree INT26_tree=null;
        CommonTree ID28_tree=null;
        CommonTree STRING29_tree=null;
        CommonTree char_literal30_tree=null;
        CommonTree char_literal32_tree=null;

        try {
            // Dart.g:87:2: ( INT | callExpression | ID | STRING | '(' expression ')' )
            int alt7=5;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (LA7_2==23) ) {
                    alt7=2;
                }
                else if ( ((LA7_2>=24 && LA7_2<=26)||(LA7_2>=30 && LA7_2<=46)) ) {
                    alt7=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case STRING:
                {
                alt7=4;
                }
                break;
            case 23:
                {
                alt7=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // Dart.g:87:4: INT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    INT26=(Token)match(input,INT,FOLLOW_INT_in_value646); 
                    INT26_tree = (CommonTree)adaptor.create(INT26);
                    adaptor.addChild(root_0, INT26_tree);

                    retval.root = new IntegerValueNode(Integer.parseInt((INT26!=null?INT26.getText():null)));

                    }
                    break;
                case 2 :
                    // Dart.g:88:4: callExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_callExpression_in_value653);
                    callExpression27=callExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, callExpression27.getTree());
                    retval.root = (callExpression27!=null?callExpression27.root:null);

                    }
                    break;
                case 3 :
                    // Dart.g:89:4: ID
                    {
                    root_0 = (CommonTree)adaptor.nil();
